Update swagger configuration. Some fixes
