# src/cmd/api/docs/swagger.json
@@ -24,6 +24,12 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Filter by group name",
+                        "name": "group",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
                         "description": "Filter by song name",
                         "name": "song",
                         "in": "query"
@@ -79,9 +85,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/songs/new": {
+            },
             "post": {
                 "description": "Adds a new song to the library",
                 "consumes": [
@@ -175,9 +179,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/songs/{id}/edit": {
+            },
             "patch": {
                 "description": "Updates the details of an existing song",
                 "consumes": [
